# duneglider

./: README.md  pyproject.toml
assets/: dg.pptx
duneglider/: aircraft_model.py  avl_test.py  dune_opt.py  dune_plot_tools.py  duneglider_opt.ipynb  step.py
duneglider/f_utils/: avl_abstractor.py  avl_config.cfg  axis.py
duneglider/glider_comp/: force.py  plane.py  probe.py
duneglider/study_cases/: aircraft_analysis.ipynb  airfoil_analysis.ipynb  optimization_test.ipynb
study_cases/: aircraft_analysis.ipynb  airfoil_analysis.ipynb  optimization_sandbox.ipynb
tests/: test_axis.py
