[tool.poetry]
name = "duneglider"
version = "0.1.0"
description = "A small glider model"
authors = ["Leonardo Mariga <leomariga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
