[tool.poetry]
name = "duneglider"
version = "0.1.0"
description = "A small glider"
authors = ["Leonardo Mariga <leomariga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aerosandbox = {path = "D:/gitd/AeroSandbox"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
