[tool.poetry]
name = "duneglider"
version = "0.1.0"
description = "A small glider"
authors = ["Leonardo Mariga <leomariga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aerosandbox = {path = "D:/gitd/AeroSandbox"}
plotly = "^5.18.0"
ipywidgets = "^8.1.1"
ipympl = "^0.9.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
